# test_1

./: Accuracy.ipynb  Accuracy.py  Compare_mkl.py  Fitting.ipynb  Fitting.md  Performance Vectorized.ipynb  Performance Vectorized.py  Performance.ipynb  Postprocess.md  README.md  accuracy.f90  approx.md  array_copy2.c  array_copy2a.asm  array_copy2b.asm  array_copy2c.asm  array_copy3a.asm  array_copy3b.asm  array_fma3a.asm  array_fma4a.asm  array_mul3a.asm  array_mul4a.asm  array_read.asm  array_read1.asm  array_read2.asm  array_read2a.asm  array_read2b.asm  array_write.asm  array_write1.asm  array_write2.asm  array_write2b.asm  array_write2c.asm  array_write2d.asm  array_write3.asm  avx.jl  b.f90  bench1.f90  benchmark.f90  blog.txt  build.sh  (+18 more)
AMD_LibM/: Makefile  README.md  build.sh
AMD_LibM/src/: main.cpp
VDT (VectoriseD maTh)/: main.c
blog/: Accuracy.md  Blog-1.md  Blog-2.md  Blog.md  CPU_result(i5).txt  Performance.md  accuracy_all.txt  gfortran_intel.txt  sin_fastest_intel.txt  sin_perf_arm.txt  sin_perf_arm2.txt  sin_perf_intel(i5).txt  sin_perf_intel.txt  sin_perf_intel1(i5).txt  sin_perf_intel2.txt
mkl/: CMakeLists.txt  app.cpp
